fix: firefox scroll bug from overflow element

--- a/src/css/components/_menu.scss
+++ b/src/css/components/_menu.scss
@@ -52,6 +52,7 @@ $mobile-menu-animation-time: .4s;
   position: sticky;
   top: 0;
   z-index: 10;
+  overflow: hidden;
   height: $menu-height-md;
   border-top-width: 4px;
   border-top-style: solid;
